# server/internal/services/usecase/path/path.go
@@ -4,23 +4,34 @@ import (
 	"strings"
 	"uust-navigator/internal/domain/models"
 	path_repo "uust-navigator/internal/storage/repositories/path"
+	point_repo "uust-navigator/internal/storage/repositories/point"
 )
 
 type PathService struct {
-	PathRepo *path_repo.PathRepo
+	PathRepo  *path_repo.PathRepo
+	PointRepo *point_repo.PointRepo
 }
 
-func Init(repo *path_repo.PathRepo) *PathService {
+func Init(pathRepo *path_repo.PathRepo, pointRepo *point_repo.PointRepo) *PathService {
 	return &PathService{
-		PathRepo: repo,
+		PathRepo:  pathRepo,
+		PointRepo: pointRepo,
 	}
 }
 
 func (s *PathService) FindPath(startPoint string, endPoint string) *models.PathResponse {
 	path := s.PathRepo.FindPath(startPoint, endPoint)
 
+	pathArray := make([]models.Point, 0)
+
+	for _, id := range strings.Split(path.PathString, "/") {
+		point := s.PointRepo.GetPointById(id)
+
+		pathArray = append(pathArray, *point)
+	}
+
 	return &models.PathResponse{
 		Depth:     path.Depth,
-		PathArray: strings.Split(path.PathString, "/"),
+		PathArray: pathArray,
 	}
 }
